# NonlinearEquations

./: .gitignore  CMakeLists.txt  graph.py  main.cpp  out.txt
headers/: LinearEquationSystemSolver.h  NonLinearSolver.h  NonLinearSystemSolver.h  matrix.h
source/: LinearEquationSystemSolver.cpp  NonLinearSolver.cpp  NonLinearSystemSolver.cpp  matrix.cpp
